<resources>
    <string name="app_name">SIKOBA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SIKOBA</string>
    <string name="nav_header_subtitle">Sistem Informasi Pencarian Korban Bencana Alam</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_daftar_bencana">Daftar Bencana</string>
    <string name="menu_pencarian_tersimpan">Pencarian Tersimpan</string>

    <string name="tempat_tanggal_lahir">%1$s, %2$s</string>

    <string name="hint_nama">Nama</string>
    <string name="hint_tanggal_lahir">Tanggal Lahir</string>
    <string name="hint_tempat_lahir">Tempat Lahir</string>
    <string name="hint_ibu">Nama Ibu Kandung</string>
    <string name="hint_kondisi">Kondisi</string>
    <string name="hint_posko">Posko</string>
    <string name="hint_rentang_umur">Rentang Umur</string>
    <string name="hint_foto_korban">Foto Korban</string>
    <string name="button_kamera">Kamera</string>
    <string name="button_galeri">Galeri</string>
    <string name="tambah">Tambah</string>
    <string name="simpan">Simpan</string>
    <string name="cari">Cari</string>
    <string name="capture_image">Capture Image</string>
    <string name="switch_camera">Switch Camera</string>

    <string name="daftar_korban">Daftar Korban</string>
    <string name="tambah_korban">Tambah Korban</string>
    <string name="simpan_data_korban">Simpan Data Korban</string>
    <string name="hapus_dari_pencarian_tersimpan">Hapus Dari Pencarian Tersimpan</string>

    <string name="informasi_umum">Informasi Umum</string>
    <string name="informasi_posko">Informasi Posko</string>

    <string name="logout">Logout</string>
    <string name="login_sebagai_admin">Login Sebagai Petugas</string>

    <string name="ubah_data">Ubah Data</string>
    <string name="hapus_data">Hapus Data</string>
    <string name="not_found">Data Tidak Ditemukan</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="masuk_sebagai_admin">Login Sebagai Petugas</string>
    <string name="masuk">Login</string>

    <string-array name="kondisi">
        <item>Sehat</item>
        <item>Luka Ringan</item>
        <item>Luka Berat</item>
        <item>Kritis</item>
    </string-array>

    <string-array name="rentang_umur">
        <item>Balita</item>
        <item>Anak-anak</item>
        <item>Remaja</item>
        <item>Dewasa</item>
        <item>Lansia</item>
    </string-array>
    <string name="title_activity_petugas_main">PetugasMainActivity</string>

</resources>