<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pengguna.cariKorban.CariKorbanActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/light_green"
        app:cardCornerRadius="10dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            >

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/vertical_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <ImageView
                android:contentDescription="@string/hint_foto_korban"
                android:id="@+id/foto_korban"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_portrait_24"
                />

            <Button
                android:id="@+id/button_kamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorPrimaryVariant"
                android:textColor="@color/white"
                android:drawableLeft="@drawable/ic_baseline_camera_alt_24"
                android:padding="10dp"
                android:text="@string/button_kamera"
                app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/foto_korban" />

            <Button
                android:id="@+id/button_galeri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorPrimaryVariant"
                android:drawableLeft="@drawable/ic_baseline_photo_library_24"
                android:padding="10dp"
                android:text="@string/button_galeri"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/vertical_guideline"
                app:layout_constraintTop_toBottomOf="@+id/foto_korban" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/dark_green"
                app:boxStrokeWidth="2dp"
                android:textColorHint="@color/dark_green"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nama"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_kamera"
                android:padding="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_green"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_cari"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="120dp"
                android:paddingVertical="10dp"
                android:backgroundTint="?attr/colorPrimaryVariant"
                android:text="@string/cari"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_username" />

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</ScrollView>